[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/Enviroment/Doors/Yellow/YellowDoor.png" type="Texture" id=1]
[ext_resource path="res://World/Enviroment/Doors/Door.gd" type="Script" id=2]
[ext_resource path="res://World/Enviroment/Doors/DoorTexture.png" type="Texture" id=3]
[ext_resource path="res://shader.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )
shader_param/glow_color = Color( 1, 0.796078, 0, 1 )
shader_param/emission_texture = ExtResource( 3 )

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1 ), Vector2( 1, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25.2915, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.15122, 10 )

[node name="YellowDoor" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Open = SubResource( 2 )

[node name="PlayerEntered" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="PlayerEntered"]
shape = SubResource( 3 )

[node name="PlayerPassed" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPassed"]
shape = SubResource( 5 )
[connection signal="area_entered" from="PlayerEntered" to="." method="_on_PlayerEntered_area_entered"]
[connection signal="area_entered" from="PlayerPassed" to="." method="_on_PlayerPassed_area_entered"]
